Update apps domain to point on k8s_deployed one

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -53,7 +53,7 @@
 													</div>
 													<div class="dropdown-menu" id="dropdown-menu" role="menu">
 														<div class="dropdown-content">
-															<a href="http://{{ env.name }}.tiime-apps-web.s3-website-eu-west-1.amazonaws.com" class="dropdown-item" target="_blank">
+															<a href="https://apps.chronos-review-{{ env.name }}.preprod.tiime.tech" class="dropdown-item" target="_blank">
 																Open the
 																{{ env.name }}
 																Tiime Apps
