Migrate all front domain

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -58,31 +58,31 @@
 																{{ env.name }}
 																Tiime Apps
 															</a>
-															<a href="http://tiime-expert-{{ env.name }}.s3-website-eu-west-1.amazonaws.com" class="dropdown-item" target="_blank">
+															<a href="https://expert.chronos-review-{{ env.name }}.preprod.tiime.tech" class="dropdown-item" target="_blank">
 																Open the
 																{{ env.name }}
 																Tiime Expert
 															</a>
-															<a href="http://tiime-pro-{{ env.name }}.s3-website-eu-west-1.amazonaws.com" class="dropdown-item" target="_blank">
+															<a href="https://pro.chronos-review-{{ env.name }}.preprod.tiime.tech" class="dropdown-item" target="_blank">
 																Open the
 																{{ env.name }}
 																Tiime Pulse
 															</a>
-															<a href="http://tiime-data-{{ env.name }}.s3-website-eu-west-1.amazonaws.com" class="dropdown-item" target="_blank">
+															<a href="https://data.chronos-review-{{ env.name }}.preprod.tiime.tech" class="dropdown-item" target="_blank">
 																Open the
 																{{ env.name }}
 																Tiime Data
 															</a>
-															<a href="http://tiime-care-{{ env.name }}.s3-website-eu-west-1.amazonaws.com" class="dropdown-item" target="_blank">
+															<a href="https://care.chronos-review-{{ env.name }}.preprod.tiime.tech" class="dropdown-item" target="_blank">
 																Open the
 																{{ env.name }}
 																Tiime Care
 															</a>
 															<div class="dropdown-divider"></div>
-															<a href="https://dashboard.heroku.com/apps/chronos-api-review-{{ env.name }}" class="dropdown-item" target="_blank">
+															<a href="https://argo.preprod.tiime.tech/applications/argocd/chronos-review-{{ env.name }}" class="dropdown-item" target="_blank">
 																Open the
 																{{ env.name }}
-																Heroku Dashboard
+																ArgoCD Dashboard
 															</a>
 														</div>
 													</div>
