--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,6 +15,9 @@ $validation-env-colors: (
   "pink": #FF69B4,
   "purple": #69359C,
   "grey": #808080,
+  "black": #000000,
+  "white": #FFFFFF,
+  "brown": #964B00,
 );
 
 html {
